<resources>
    <string name="app_name">Cat</string>
    <string name="finish_game">退出游戏</string>
    <string name="reset_blocks">重置路障</string>
    <string name="select_difficulty">选择难度</string>
    <string name="easy">简单</string>
    <string name="normal">正常</string>
    <string name="harder">困难</string>
    <string name="hell">地狱</string>
    <string name="current_level">当前难度：</string>
    <string name="icon_name">抓住小猫</string>
    <string name="best_recorder">最佳记录</string>
    <string name="last_recorder">本次记录</string>
    <string name="step">步</string>
    <string name="OK">确定</string>
    <string name="Question">请输入你的生日:</string>

</resources>
