<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cc.yh.cat.MainActivity">
   <com.cc.yh.cat.PlayGround
       android:id="@+id/play_ground"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="50dp"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_level"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/current_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:layout_weight="1"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/finish_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_game"
            android:layout_weight="1"
            android:background="#00000000"
            />
        <Button
            android:id="@+id/reset_blocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_blocks"
            android:layout_weight="1"
            android:background="#00000000"
            />
        <Button
            android:id="@+id/select_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_difficulty"
            android:layout_weight="1"
            android:background="#00000000"
            />
    </LinearLayout>




</FrameLayout>
